fix for tooltip line wrap

--- a/samples/dash-if-reference-player/app/css/main.css
+++ b/samples/dash-if-reference-player/app/css/main.css
@@ -366,6 +366,9 @@ MOBILE SOURCE MENU MODAL LIST
 /****************************
         DESKTOP MENU
 *****************************/
+.tooltip-inner {
+    white-space:pre-wrap;
+}
 
 .dropdown-submenu {
     position: relative;
